--- a/ballotPlanner/Elections/Candidates Index/CandidatesIndex.storyboard
+++ b/ballotPlanner/Elections/Candidates Index/CandidatesIndex.storyboard
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VXp-UN-IuK">
-                                <rect key="frame" x="0.0" y="44" width="375" height="818"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VXp-UN-IuK">
+                                <rect key="frame" x="5" y="44" width="365" height="818"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PYb-Pf-bhm">
                                     <size key="itemSize" width="145" height="148"/>
@@ -36,17 +35,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="145" height="148"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Candidate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1u-X4-vpq">
-                                                    <rect key="frame" x="0.0" y="38" width="93" height="30"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0c-Jj-c81">
+                                                    <rect key="frame" x="0.0" y="112" width="145" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0c-Jj-c81">
-                                                    <rect key="frame" x="0.0" y="72" width="93" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Candidate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1u-X4-vpq">
+                                                    <rect key="frame" x="0.0" y="83" width="145" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -60,13 +59,15 @@
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CandidatesIndexSectionHeader" id="mu2-Jl-z4H" customClass="CandidatesIndexSectionHeader" customModule="ballotPlanner" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="365" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Section Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdi-pg-iRJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Section Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdi-pg-iRJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="42"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="42" id="wWg-Ij-siE"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -77,7 +78,28 @@
                                                 <action selector="showButtonAction:" destination="mu2-Jl-z4H" eventType="touchUpInside" id="DRw-IL-OBL"/>
                                             </connections>
                                         </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f83-6o-Pjc">
+                                            <rect key="frame" x="0.0" y="48" width="365" height="2"/>
+                                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="2" id="QV3-BM-Zj5"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="f83-6o-Pjc" secondAttribute="trailing" id="0HB-9S-oiF"/>
+                                        <constraint firstItem="f83-6o-Pjc" firstAttribute="top" secondItem="hdi-pg-iRJ" secondAttribute="bottom" constant="6" id="0cS-CJ-Age"/>
+                                        <constraint firstAttribute="trailing" secondItem="f83-6o-Pjc" secondAttribute="trailing" id="BXb-j7-ze8"/>
+                                        <constraint firstItem="hdi-pg-iRJ" firstAttribute="top" secondItem="mu2-Jl-z4H" secondAttribute="top" id="H0p-3W-SoA"/>
+                                        <constraint firstItem="f83-6o-Pjc" firstAttribute="leading" secondItem="mu2-Jl-z4H" secondAttribute="leading" id="OGJ-Fx-qfU"/>
+                                        <constraint firstItem="hdi-pg-iRJ" firstAttribute="leading" secondItem="f83-6o-Pjc" secondAttribute="leading" id="Pjn-d6-f8V"/>
+                                        <constraint firstItem="f83-6o-Pjc" firstAttribute="centerX" secondItem="mu2-Jl-z4H" secondAttribute="centerX" id="bTq-Kt-7DT"/>
+                                        <constraint firstItem="f83-6o-Pjc" firstAttribute="leading" secondItem="mu2-Jl-z4H" secondAttribute="leading" id="hgf-XF-XWg"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="hdi-pg-iRJ" secondAttribute="trailing" constant="-26" id="hwg-OB-iVa"/>
+                                    </constraints>
                                     <connections>
                                         <outlet property="button" destination="8Pv-0g-6Sl" id="oNl-8c-Bjn"/>
                                         <outlet property="sectionHeaderlabel" destination="hdi-pg-iRJ" id="YqH-qG-UZy"/>
@@ -90,6 +112,14 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VXp-UN-IuK" firstAttribute="top" secondItem="w1m-z3-vkW" secondAttribute="top" id="9KN-nk-OjQ"/>
+                            <constraint firstItem="VXp-UN-IuK" firstAttribute="leading" secondItem="w1m-z3-vkW" secondAttribute="leading" constant="5" id="SNr-ic-6uG"/>
+                            <constraint firstAttribute="bottom" secondItem="VXp-UN-IuK" secondAttribute="bottom" constant="-50" id="ShS-SW-CL7"/>
+                            <constraint firstItem="VXp-UN-IuK" firstAttribute="centerX" secondItem="rWf-it-wcd" secondAttribute="centerX" id="awR-9n-JI5"/>
+                            <constraint firstItem="VXp-UN-IuK" firstAttribute="top" secondItem="w1m-z3-vkW" secondAttribute="top" id="mBh-zQ-Ne0"/>
+                            <constraint firstAttribute="trailing" secondItem="VXp-UN-IuK" secondAttribute="trailing" constant="5" id="mzd-ud-7tY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="w1m-z3-vkW"/>
                     </view>
                     <toolbarItems/>
@@ -111,7 +141,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9Qf-uu-lJF">
-                                <rect key="frame" x="16" y="44" width="343" height="128"/>
+                                <rect key="frame" x="16" y="44" width="343" height="212"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
